cmake_minimum_required(VERSION 3.22)

set(BART_SRC_NUM
        blas_md_wrapper.c
        blas_md_wrapper.h
        blas.c
        blas.h
        blockproc.c
        blockproc.h
        casorati.c
        casorati.h
        chebfun.c
        chebfun.h
        conv.c
        conv.h
        convcorr.c
        convcorr.h
        convoaa.c
        convoaa.h
        cudnn_wrapper.c
        cudnn_wrapper.h
        fft-cuda.c
        fft-cuda.h
        fft.c
        fft.h
        filter.c
        filter.h
        flpmath.c
        flpmath.h
        fltools.c
        fltools.h
        gaussians.c
        gaussians.h
        gpu_conv.cu
        gpu_conv.h
        gpu_reduce.cu
        gpu_reduce.h
        gpukrnls_bat.cu
        gpukrnls_bat.h
        gpukrnls_copy.cu
        gpukrnls_copy.h
        gpukrnls_misc.cu
        gpukrnls_misc.h
        gpukrnls_unfold.cu
        gpukrnls_unfold.h
        gpukrnls.cu
        gpukrnls.h
        gpuops.c
        gpuops.h
        gpurand.cu
        gpurand.h
        init.c
        init.h
        iovec.c
        iovec.h
        lapack.c
        lapack.h
        linalg.c
        linalg.h
        loop.c
        loop.h
        matexp.c
        matexp.h
        md_wrapper.c
        md_wrapper.h
        mdfft.c
        mdfft.h
        mem.c
        mem.h
        mpi_ops.c
        mpi_ops.h
        multind.c
        multind.h
        multiplace.c
        multiplace.h
        nlmeans.c
        nlmeans.h
        ode.c
        ode.h
        ops_graph.c
        ops_graph.h
        ops_p.c
        ops_p.h
        ops.c
        ops.h
        optimize.c
        optimize.h
        polynom.c
        polynom.h
        qform.c
        qform.h
        quadrature.c
        quadrature.h
        rand.c
        rand.h
        reduce_md_wrapper.c
        reduce_md_wrapper.h
        shuffle.c
        shuffle.h
        simplex.c
        simplex.h
        specfun.c
        specfun.h
        splines.c
        splines.h
        vec3.c
        vec3.h
        vecops_strided.c
        vecops_strided.h
        vecops.c
        vecops.h
        vptr.c
        vptr.h
        wavelet.c
        wavelet.h
)
add_library(num_lib ${BART_SRC_NUM})
